--- a/src/main/resources/templates/trejdInfo.html
+++ b/src/main/resources/templates/trejdInfo.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" href="/stars.css">
     <meta charset="UTF-8">
-    <title>Trejd Info</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/static/stars.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Trejd</title>
 </head>
 <body>
 
+<nav class="navbar navbar-expand-lg navbar-dark py-3 navbar-custom">
+    <div class="container">
+        <img src="/logo.png" alt="logo" width="200px" height="auto">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+            <span class="navbar-toggler-icon "></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item ">
+                    <a href="#home" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#trejd" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#offerlist" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <div th:if="${writtenByPerformer}" >
-    Jag är performer
+    <h3 th:text="'Hej ' + ${session.firstname} + '! Hoppas du är nöjd med ditt senaste arbete. Betygsätt denna Trejd:'"></h3>
 </div>
 
 <div th:unless="${writtenByPerformer}" >
-    Jag är beställare
+    <h3 th:text="'Hej ' + ${session.firstname} + '! Hoppas du är nöjd med det arbete som utfördes hos dig. Betygsätt denna Trejd:'"></h3>
 </div>
 
 
@@ -22,35 +51,26 @@
 
     <form method="post" th:action="'/trejdInfo/' + ${trejd.id} + '/addReview/'">
         <h3>Rating: </h3>
-        <article class="movie">
+<!--        <article class="movie">-->
 
-            <div class="rating">
-                <img src="/star-gray.png" onclick="clickStar(1)" onmouseenter="hoverStar(1)" onmouseout="leftStar()">
-                <img src="/star-gray.png" onclick="clickStar(2)" onmouseenter="hoverStar(2)" onmouseout="leftStar()">
-                <img src="/star-gray.png" onclick="clickStar(3)" onmouseenter="hoverStar(3)" onmouseout="leftStar()">
-                <img src="/star-gray.png" onclick="clickStar(4)" onmouseenter="hoverStar(4)" onmouseout="leftStar()">
-                <img src="/star-gray.png" onclick="clickStar(5)" onmouseenter="hoverStar(5)" onmouseout="leftStar()">
-            </div>
+<!--            <div class="rating">-->
+<!--                <img src="/star-gray.png" onclick="clickStar(1)" onmouseenter="hoverStar(1)" onmouseout="leftStar()">-->
+<!--                <img src="/star-gray.png" onclick="clickStar(2)" onmouseenter="hoverStar(2)" onmouseout="leftStar()">-->
+<!--                <img src="/star-gray.png" onclick="clickStar(3)" onmouseenter="hoverStar(3)" onmouseout="leftStar()">-->
+<!--                <img src="/star-gray.png" onclick="clickStar(4)" onmouseenter="hoverStar(4)" onmouseout="leftStar()">-->
+<!--                <img src="/star-gray.png" onclick="clickStar(5)" onmouseenter="hoverStar(5)" onmouseout="leftStar()">-->
+<!--            </div>-->
 
-            <div th:each="review:${reviews}">
-                <p th:text="${review.description}" ></p>
-                <p th:text="${review.rating} + ' poäng'"></p>
-            </div>
-
-            <section class="result">
-                &nbsp;
-            </section>
-
-        </article>
+<!--        </article>-->
 
 
-<!--        <select name="rating" class="mb-2">-->
-<!--            <option th:value="1">1</option>-->
-<!--            <option th:value="2">2</option>-->
-<!--            <option th:value="3">3</option>-->
-<!--            <option th:value="4">4</option>-->
-<!--            <option th:value="5">5</option>-->
-<!--        </select>-->
+        <select name="rating" class="mb-2">
+            <option th:value="1">1</option>
+            <option th:value="2">2</option>
+            <option th:value="3">3</option>
+            <option th:value="4">4</option>
+            <option th:value="5">5</option>
+        </select>
         <div class="mb-3">
             <textarea name="description" class="form-control-lg form-control" id="exampleFormControlTextarea1"
                       rows="3"
@@ -62,7 +82,22 @@
 </div>
 
 </style>
-<script src="/star.js"></script>
+
+
+<footer class="p-5 navbar-custom text-white text-center position-relative">
+    <div class="container">
+        <p class="lead"> Copyright &copy; 2022 Trejd</p>
+        <a href="#" class="position-absolute bottom-0 end-0 p-5">
+            <i class="bi bi-arrow-up-circle h1 icon-black" ></i>
+        </a>
+    </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+<script src="/star.js" ></script>
 
 </body>
 </html>
