--- a/src/main/resources/templates/maketrejd.html
+++ b/src/main/resources/templates/maketrejd.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" href="/stars.css">
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Make Trejd</title>
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-dark py-3 navbar-custom">
+    <div class="container">
+        <img src="/logo.png" alt="logo" width="200px" height="auto">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+            <span class="navbar-toggler-icon "></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item ">
+                    <a href="#home" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#trejd" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#offerlist" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
     <h1>maketrejd page</h1>
 
@@ -99,5 +127,18 @@
 
 </style>
 <!--<script src="/star.js"></script>-->
+
+<footer class="p-5 navbar-custom text-white text-center position-relative">
+    <div class="container">
+        <p class="lead"> Copyright &copy; 2022 Trejd</p>
+        <a href="#" class="position-absolute bottom-0 end-0 p-5">
+            <i class="bi bi-arrow-up-circle h1 icon-black" ></i>
+        </a>
+    </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
