--- a/src/main/resources/templates/create-order.html
+++ b/src/main/resources/templates/create-order.html
@@ -52,7 +52,7 @@
 </div>
 <p th:text="${session.firstname}">inloggad firstname</p>
 
-  <form action="/create-order" method="POST" th:object="${order}">
+  <form action="" method="POST" th:object="${order}">
 <!-**************************** IF PARAMETRAR ******************************************** ->
     <div th:if="${performer}!=null" class="text-custom text-center performer-info " style="color:white !important">
       <h1>Performer info</h1>
@@ -69,9 +69,9 @@
     <div th:if="${performer}==null" class="text-custom text-center">
     <select th:field="*{skillId}" class="form-select text-custom text-center ">
       <option value="0" selected="selected">Choose skill</option>
-      <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}"></select>
-
-    <textarea name="description" class="form-control text-center" id="exampleFormControlTextarea1" rows="3" th:field="*{description}" placeholder="Describe your need..."></textarea>
+      <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}">
+    </select>
+        <textarea name="description" class="form-control text-center" id="exampleFormControlTextarea1" rows="3" th:field="*{description}" placeholder="Describe your need..."></textarea>
     </div>
     <!-************************************  KÖRS ALLTID  ****************************************** ->
     <div class="text-custom text-center" >
@@ -97,7 +97,7 @@
 
 <!--button onclick="getLocation()"class="btn btn-secondary mb-3 text-center ">Get your location</button>
 <button onclick="setLocation()"class="btn btn-secondary mb-3 text-center">Set your location</button-->
-<script src="/geoScript.js"></script>
+
 </div>
 
 <footer class="p-5 navbar-custom text-white text-center position-relative">
@@ -108,7 +108,6 @@
     </a>
   </div>
 </footer>
-
 
 </body>
 </html>
