--- a/src/main/resources/templates/create-user.html
+++ b/src/main/resources/templates/create-user.html
@@ -39,47 +39,57 @@
 </div>
 <div class="container text-custom mt-5">
 <form action="" method="post" class="mb-3" th:object="${user}">
-    <label for="FormInput1" class="form-label">Förnamn</label>
+    <label for="FormInput1" class="form-label">Förnamn</label><span class="error" th:if="${#fields.hasErrors('firstName')}">Field can't be empty</span>
     <input type="text" th:field="*{firstName}" class="form-control" id="FormInput1" placeholder="First Name">
 
-    <label for="FormInput2" class="form-label">Efter namn</label>
+    <label for="FormInput2" class="form-label">Efter namn</label><span class="error" th:if="${#fields.hasErrors('lastName')}">Field can't be empty</span>
     <input type="text" th:field="*{lastName}" class="form-control" id="FormInput2" placeholder="Last name">
 
-    <label for="FormInput3" class="form-label">E-post adress</label>
+    <label for="FormInput3" class="form-label">E-post adress</label><span class="error" th:if="${#fields.hasErrors('email')}">Field can't be empty</span>
     <input type="email" th:field="*{email}" class="form-control" id="FormInput3" placeholder="name@example.com">
 
-    <label for="FormInput4" class="form-label">Lösenord</label>
+    <label for="FormInput4" class="form-label">Lösenord</label><span class="error" th:if="${#fields.hasErrors('password')}">Field can't be empty</span>
     <input type="password" th:field="*{password}" class="form-control" id="FormInput4" placeholder="password">
 
-    <label for="FormInput5" class="form-label">Location</label>
+    <label for="FormInput5" class="form-label">Location</label><span class="error" th:if="${#fields.hasErrors('location')}">Field can't be empty</span>
     <input type="text" th:field="*{location}" class="form-control" id="FormInput5" placeholder="Get or type your location"><br>
 
     <input type = "hidden" th:field="*{latitude}" id="latitude">
     <input type = "hidden" th:field="*{longitude}" id="longitude">
-    <div class = "mb-3">
-        <input type="button" class="btn btn-secondary" onclick="getLocation()" value="Get your location"></input>
-        <input type="button" class="btn btn-secondary" onclick="setLocation()" value="Set your location"></input>
+    <div class="mb-3">
+        <input type="button" class="btn btn-secondary" onclick="getLocation()" value="Get your location" id="getLoc"/>
+        <input type="button" class="btn btn-secondary" onclick="setLocation()" value="Set your location" id="setLoc"/>
     </div>
-<div class="mb-2">
-    <label class="form-label">Skill</label>
-    <select th:field="*{skillId}" class="form-select">
-        <option value="0" selected="selected">Välj skill</option>
-        <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}"></select>
-</div>
-<!--div th:if>
-    <label for="exampleDataList2" class="form-label">Add second skill</label>
-    <input class="form-control" list="datalistOptions" id="exampleDataList2" placeholder="Type to search...">
-    <datalist id="datalistOptions2">
-        <option th:each="skills: ${skills}"  th:value="${skills.skillName}">
-    </datalist>
-</div-->
-    <div class="col-auto">
+
+        <div class="mb-2">
+            <h3>Välj upp till 3 skills</h3>
+            <label class="form-label">Skill</label><span class="error" th:if="${#fields.hasErrors('skillId1')}">Field can't be empty</span>
+            <select th:field="*{skillId1}" class="form-select" onchange="displayNewDropdown(1)">
+                <option value="0" selected="selected">Välj skill</option>
+                <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}">
+            </select>
+        </div>
+        <div class="mb-2" id="dropdown1" >
+            <label class="form-label">Skill</label>
+            <select th:field="*{skillId2}" class="form-select" onchange="displayNewDropdown(2)">
+                <option value="0" selected="selected">Välj skill</option>
+                <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}">
+            </select>
+        </div>
+        <div class="mb-2" id="dropdown2">
+            <label class="form-label">Skill</label>
+            <select th:field="*{skillId3}" class="form-select" onchange="displayNewDropdown(0)">
+                <option value="0" selected="selected">Välj skill</option>
+                <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}">
+            </select>
+        </div>
+
+    <div class="col-auto" id="buttonCreateUser">
         <button type="submit" class="btn btn-primary mb-3">Confirm</button>
     </div>
 </form>
 
 </div>
-    <script src="geoScript.js"></script>
 
 <footer class="p-5 navbar-custom text-white text-center position-relative">
     <div class="container">
@@ -91,6 +101,9 @@
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="/geoScript.js"></script>
+<script src="/trejdScript.js"></script>
+
+
 </body>
 </html>
 
