--- a/src/main/resources/templates/viewOfferList.html
+++ b/src/main/resources/templates/viewOfferList.html
@@ -2,41 +2,55 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Title</title>
 </head>
 <body>
-<h1>List of Offers</h1>
 
-<style>
-        .border {
-        background-color: lightgray;
-        border-style: solid 30px;
-        border-radius: 3px;
-        padding: 15px;
-        margin-top: 15px;
-        margin-bottom: 15px;
-        Margin-right: 500px;
-        Margin-left: 100px;
-        }
-        .center {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        }
+<nav class="navbar navbar-expand-lg navbar-dark py-3 navbar-custom">
+    <div class="container">
+        <img src="/logo.png" alt="logo" width="200px" height="auto">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+            <span class="navbar-toggler-icon "></span>
+        </button>
+        <div class="collapse navbar-collapse header-white" id="navmenu">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item ">
+                    <a href="#home" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#trejd" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/logout" class="nav-link"><span class="text-custom">LOGGA UT </span></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div>
+<h1 class="text-custom text-center p-4 ">Önskade Tjänster</h1>
+</div>
 
-        a {
-        color: #333;
-        }
 
-    </style>
 
-<form action="/offerlist" method="POST" th:object="${order}">
+<form action="/offerlist" method="POST" th:object="${order}" class="text-custom text-center">
+  <div>
     <select th:name="skillId">
-        <option value="0" selected="selected">Choose skill you are looking for</option>
+        <option value="0" selected="selected">Sortera utefter dina tjänster</option>
         <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}">
-
+    
     </select>
-    <button type="submit">Filter</button>
+      </div>
+      <div>
+    <button type="submit" class="btn btn-secondary mb-5 mt-3 text-center">Filter</button>
+        </div>
 </form>
 
 
@@ -51,6 +65,14 @@
 </div>
 
 
-<h1>AND SO ON.......</h1>
+
+<footer class="p-5 navbar-custom text-white text-center position-relative">
+    <div class="container">
+        <p class="lead"> Copyright &copy; 2022 Trejd</p>
+        <a href="#" class="position-absolute bottom-0 end-0 p-5">
+            <i class="bi bi-arrow-up-circle h1" ></i>
+        </a>
+    </div>
+</footer>
 </body>
 </html>
