--- a/src/main/resources/static/starstest.css
+++ b/src/main/resources/static/starstest.css
@@ -66,35 +66,44 @@ width 50px;
 
 }
 
+<!-- STYLE.CSS -->
 
+body {
+    background-color: darkgray;
+    margin:20px;
+}
 
+body,
+.movie input,
+.movie button{
+    font-size: 20px;
+    line-height: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
 
+.movie {
+    padding:30px;
+    background-color: white;
+    display: inline-block;
+}
 
+.movie .poster {
+    width: 500px;
+}
 
+.movie .rating {
+    display: flex;
+    justify-content: center;
+}
 
+.movie .rating img {
+    height:30px;
+    cursor:pointer;
+    padding:0 5px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.movie .result {
+    text-align: center;
+    padding-top:30px;
+    cursor: pointer;
+}
