--- a/src/main/resources/templates/my-page.html
+++ b/src/main/resources/templates/my-page.html
@@ -26,7 +26,9 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark py-3 navbar-custom text-custom">
     <div class="container">
-        <img src="/logo.png" alt="logo" width="200px" height="auto">
+        <a href="h">
+            <img src="/logo.png" alt="logo" width="200px" height="auto">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
             <span class="navbar-toggler-icon"></span>
         </button>
